--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -3,7 +3,11 @@
     .error {
         color: red;
     }
-</style>
+
+    .alert {
+        z-index: 1100;
+        position: fixed;
+    }</style>
 <h4 class="fw-semibold py-3 mb-4">Danh sách giảm giá</h4>
 <div class="mb-4">
     <div class="row justify-content-end me-4">
@@ -68,13 +72,13 @@
                             <div class="col-lg-7">
                                 <div class="mb-3">
                                     <label class="form-label">Mã giảm giá:</label>
-                                    <input type="text" class="form-control" th:name="code" />
+                                    <input type="text" class="form-control" th:name="code"/>
                                     <span class="error codeloc"></span>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Giảm tối đa:</label>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" name="value" />
+                                        <input type="number" class="form-control" name="value"/>
                                         <span class="input-group-text">%</span>
                                     </div>
                                     <span class="error valueloc"></span>
@@ -91,7 +95,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Ngày kết thúc:</label>
-                                    <input type="date" class="form-control" name="dateEnd" />
+                                    <input type="date" class="form-control" name="dateEnd"/>
                                     <span class="error dateEndloc"></span>
                                 </div>
                                 <div class="mb-3">
@@ -140,7 +144,7 @@
               <span class="input-group-text">
                 <i class="bx bx-search"></i>
               </span>
-                        <input type="text" class="form-control" placeholder="Tìm id" />
+                        <input type="text" class="form-control" placeholder="Tìm id"/>
                         <button class="btn btn-primary" type="button">Tìm kiếm</button>
                     </div>
                 </div>
@@ -170,7 +174,7 @@
                 </p>
             </div>
         </div>
-        <hr />
+        <hr/>
         <div class="table-responsive text-nowrap">
             <table class="table table-hover overflow-hidden">
                 <thead>
@@ -189,14 +193,14 @@
                     <td th:text="|${coupon.value}%|"></td>
                     <td>
                         <p>
-                            <img th:src="@{'/image/'+*{coupon.image}}" class="w-px-100" />
+                            <img th:src="@{'/image/'+*{coupon.image}}" class="w-px-100"/>
                         </p>
                     </td>
+                    <td class="form-switch text-center"><input
+                            class="form-check-input update-active-coupon cursor-pointer"
+                            type="checkbox"
+                            th:value="${coupon.id}" th:checked="${coupon.active}"></td>
                     <td>
-                <span
-                        th:text="${coupon.active} == true?'Hoạt động':'Không hoạt động'"
-                />
-                    </td>
                     <td>
                         <button
                                 type="button"
@@ -212,7 +216,7 @@
                                 tabindex="-1"
                                 aria-hidden="true"
                         >
-                            <div class="modal-dialog modal-lg">
+                            <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title">Thông tin phiếu mua hàng</h5>
@@ -231,8 +235,8 @@
                                                 enctype="multipart/form-data"
                                                 class="formUpdate"
                                         >
-                                            <div class="row">
-                                                <div class="col-lg-5 col-sm-12 text-center">
+                                            <div>
+                                                <div class="col-lg-12">
                                                     <div class="text-center">
                                                         <img
                                                                 th:src="@{'/image/'+*{image}}"
@@ -241,43 +245,24 @@
                                                                 width="250"
                                                         />
                                                     </div>
-                                                    <div class="error imageloc"></div>
-                                                    <label
-                                                            class="btn btn-primary me-2 mb-4"
-                                                            tabindex="0"
-                                                    >
-                                <span class="d-none d-sm-block"
-                                >Tải ảnh lên</span
-                                >
-                                                        <i class="bx bx-upload d-block d-sm-none"></i>
-                                                        <input
-                                                                type="file"
-                                                                class="file-input"
-                                                                hidden=""
-                                                                accept="image/png, image/jpeg"
-                                                                name="avatar"
-                                                        />
-                                                    </label>
-                                                </div>
-                                                <div class="col-lg-7">
                                                     <div class="mb-3">
                                                         <label class="form-label">Mã giảm giá:</label>
-                                                        <input
-                                                                type="text"
-                                                                class="form-control"
-                                                                th:name="code"
-                                                                th:value="${coupon.code}"
+                                                        <input disabled
+                                                               type="text"
+                                                               class="form-control"
+                                                               th:name="code"
+                                                               th:value="${coupon.code}"
                                                         />
                                                         <!--                                                        <span  class="error codeloc"></span>-->
                                                     </div>
                                                     <div class="mb-3">
                                                         <label class="form-label">Giảm tối đa:</label>
                                                         <div class="input-group">
-                                                            <input
-                                                                    type="number"
-                                                                    class="form-control"
-                                                                    th:name="value"
-                                                                    th:value="${coupon.value}"
+                                                            <input disabled
+                                                                   type="number"
+                                                                   class="form-control"
+                                                                   th:name="value"
+                                                                   th:value="${coupon.value}"
                                                             />
                                                             <span class="input-group-text">%</span>
                                                         </div>
@@ -285,55 +270,33 @@
                                                     </div>
                                                     <div class="mb-3">
                                                         <label class="form-label">Ngày bắt đầu:</label>
-                                                        <input
-                                                                type="date"
-                                                                class="form-control"
-                                                                th:name="dateStart"
-                                                                th:value="${coupon.dateStart}"
+                                                        <input disabled
+                                                               type="date"
+                                                               class="form-control"
+                                                               th:name="dateStart"
+                                                               th:value="${coupon.dateStart}"
                                                         />
                                                         <span class="error dateStartloc"></span>
                                                     </div>
                                                     <div class="mb-3">
                                                         <label class="form-label">Ngày kết thúc:</label>
-                                                        <input
-                                                                type="date"
-                                                                class="form-control"
-                                                                th:name="dateEnd"
-                                                                th:value="${coupon.dateEnd}"
+                                                        <input disabled
+                                                               type="date"
+                                                               class="form-control"
+                                                               th:name="dateEnd"
+                                                               th:value="${coupon.dateEnd}"
                                                         />
                                                         <span class="error dateEndloc"></span>
                                                     </div>
-                                                    <div class="mb-3">
-                                                        <label class="form-label">Trạng thái :</label>
-                                                        <br />
-                                                        <div class="form-check form-check-inline mt-3">
-                                                            <input
-                                                                    class="form-check-input"
-                                                                    type="radio"
-                                                                    th:name="active"
-                                                                    th:value="true"
-                                                                    th:checked="${coupon.active==true}"
-                                                            />
-                                                            <label class="form-check-label"
-                                                            >Hoạt Động</label
-                                                            >
-                                                        </div>
-                                                        <div class="form-check form-check-inline">
-                                                            <input
-                                                                    class="form-check-input"
-                                                                    type="radio"
-                                                                    th:name="active"
-                                                                    th:value="false"
-                                                                    th:checked="${coupon.active==false}"
-                                                            />
-                                                            <label class="form-check-label"
-                                                            >Không hoạt động</label
-                                                            >
-                                                        </div>
-                                                    </div>
+<!--                                                    <div class="mb-3">-->
+
+<!--                                                        <label class="form-label">Trạng thái :</label>-->
+<!--                                                        <br/>-->
+<!--                                                        <span th:text="${coupon.active==true?'Hoạt Động':'Không Hoạt Động'}"></span>-->
+<!--                                                    </div>-->
                                                 </div>
                                             </div>
-                                            <br />
+                                            <br/>
                                             <div class="row justify-content-xl-end">
                                                 <div class="w-auto">
                                                     <a
@@ -341,23 +304,6 @@
                                                             class="btn btn-primary btn-control"
                                                     >Các sản phẩm được giảm</a
                                                     >
-                                                </div>
-                                                <div class="w-auto">
-                                                    <button
-                                                            type="reset"
-                                                            class="btn btn-primary btn-control"
-                                                    >
-                                                        Đặt lại
-                                                    </button>
-                                                </div>
-                                                <div class="w-auto">
-                                                    <button
-                                                            type="submit"
-                                                            class="btn btn-primary btn-control"
-                                                            onclick="return confirm('Xác nhận cập nhật')"
-                                                    >
-                                                        Sửa
-                                                    </button>
                                                 </div>
                                             </div>
                                         </form>
@@ -370,7 +316,7 @@
                 </tbody>
             </table>
         </div>
-        <hr class="card-separator" />
+        <hr class="card-separator"/>
     </div>
     <div class="card-footer">
         <div class="d-inline-flex float-end"></div>
@@ -662,6 +608,49 @@
             });
         });
     });
+
+    $.each($(".update-active-coupon"), function (index, item) {
+        $(item).on("change", function () {
+            Swal.fire({
+                title: "Bạn xác nhận cập nhật?",
+                icon: "question",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Xác nhận!",
+                cancelButtonText: "Hủy",
+                customClass: {
+                    container: 'alert'
+                }
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    var data = {
+                        id: item.value,
+                        active: item.checked
+                    }
+                    $.ajax({
+                        url: "/admin/coupon/update",
+                        method: "post",
+                        data: JSON.stringify(data),
+                        contentType: "application/json",
+                        success: function (data) {
+                            Swal.fire({
+                                title: "Thành công!",
+                                text: "Trạng thái sản phẩm đã được cập nhật",
+                                icon: "success",
+                                customClass: {
+                                    container: 'alert'
+                                }
+                            });
+                        }
+                    })
+                } else {
+                    item.checked = !item.checked
+                }
+            });
+        })
+
+    })
 </script>
 <script src="/admin/plugin/js/loadImage.js"></script>
 </html>
